force-app/main/default/objects/AO_Activity__c/AO_Activity__c.object-meta.xml
<CustomObject>
    <label>AO Activity</label>
    <nameField>
        <displayFormat>AOAct-{0000000}</displayFormat>
        <label>AO Activity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AO Activities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>