force-app/main/default/objects/AO_Activity__c/fields/AO_Availability__c.field-meta.xml
<CustomField>
    <fullName>AO_Availability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AO Availability</label>
    <referenceTo>AO_Availability__c</referenceTo>
    <relationshipLabel>AO Activities</relationshipLabel>
    <relationshipName>AO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>