force-app/main/default/objects/AO_Activity__c/fields/AO_Member__c.field-meta.xml
<CustomField>
    <fullName>AO_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AO Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>