force-app/main/default/objects/AO_Activity__c/fields/Event_Actual_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Actual_End_Time__c</fullName>
    <label>Actual End Time</label>
    <type>DateTime</type>
</CustomField>