force-app/main/default/objects/AO_Activity__c/fields/Is_Gmeet_Recording_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Gmeet_Recording_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Gmeet Recording Available</label>
    <type>Checkbox</type>
</CustomField>