force-app/main/default/objects/AO_Activity__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>AO Activities</relationshipLabel>
    <relationshipName>AO_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>