force-app/main/default/objects/AO_Activity__c/fields/Meeting_Url_Charcter__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Url_Charcter__c</fullName>
    <formula>RIGHT(Meeting_Url__c , 12 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Url Charcter</label>
    <type>Text</type>
</CustomField>