force-app/main/default/objects/AO_Activity__c/fields/Recording_URL__c.field-meta.xml
<CustomField>
    <fullName>Recording_URL__c</fullName>
    <label>Recording URL</label>
    <type>Url</type>
</CustomField>